src/test/deca/codegen/invalid/objet/noCheck/noCheckNullReference.deca
class A{
	int x;
}

{
	A a = null;
	int y = a.x;
}